Alignment of Repeat on inputs is fixed

--- a/src/components/event_forms/styles/EventForm.module.scss
+++ b/src/components/event_forms/styles/EventForm.module.scss
@@ -250,3 +250,9 @@
     margin-left: 10px;
   }
 }
+.repeat{
+  display:flex;
+  justify-content: space-between;  
+  flex-direction: row;
+  flex-wrap:nowrap  
+}
